# ros2

exercice ROS2/: CMakeLists.txt  control.yaml  display.launch.py  empty_base.launch.py  exercice_nabot_hardware.cpp  exercice_nabot_hardware.hpp  nabot_base.xml  package.xml
src/bilbot_ws/: CMakeLists.txt  package.xml
src/bilbot_ws/launch/: display.launch.py
src/bilbot_ws/meshes/: chassis.dae
src/bilbot_ws/urdf/: bilbot.urdf
